correcting alignment on navbar and starting home section

--- a/src/static/css/LanguageWrapper.css
+++ b/src/static/css/LanguageWrapper.css
@@ -6,5 +6,6 @@
 }
 
 .general-container{
-    width: 100vw;
+    width: 100%;
+    height: 400vmax;
 }
