--- a/src/static/css/Navbar.css
+++ b/src/static/css/Navbar.css
@@ -5,7 +5,8 @@
     height: 60px;
     background-color: #121212;
     justify-content: center;
-    border: 1px solid black;
+    border-bottom: 1px solid rgb(96, 165, 250);
+    position: fixed;
 
 }
 
@@ -36,7 +37,7 @@
 
 .media-link{
     margin: 0 2px;
-    
+    display: flex;
 }
 
 #set-language{
